--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "filament/filament": "^3.2",
         "laravel/framework": "^11.9",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
-        "midtrans/midtrans-php": "^2.5"
+        "livewire/livewire": "^3.5",
+        "midtrans/midtrans-php": "^2.5",
+        "tailflow/laravel-orion": "^2.22"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -33,7 +37,8 @@
     "scripts": {
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
-            "@php artisan package:discover --ansi"
+            "@php artisan package:discover --ansi",
+            "@php artisan filament:upgrade"
         ],
         "post-update-cmd": [
             "@php artisan vendor:publish --tag=laravel-assets --ansi --force"
